[package]
name = "rusty_torrent"
description = "A BitTorrent client, written in Rust."
repository = "https://github.com/seb-odessa/rusty_torrent.git"
version = "0.0.2"
readme = "README.md"
keywords = ["bittorrent"]
authors = ["ken@kenpratt.net", "pietromenna@yahoo.com", "seb@ukr.net"]


[dependencies]
bencode = "*"
getopts = "*"
hyper = "0.5"
rand = "*"
rust-crypto = "*"
url = "*"
#percent-encoding = "*"
